Correct baseline grid alignment

--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -41,11 +41,14 @@
     font-size: #{map-get($font-sizes, display-mobile)}rem;
     font-weight: 100;
     line-height: map-get($line-heights, display-mobile);
-    padding-top: 0;
+    margin-bottom: map-get($sp-after, display-mobile) - map-get($nudges, display-mobile);
+    padding-top: map-get($nudges, display-mobile);
 
     @media (min-width: $breakpoint-heading-threshold) {
       font-size: #{map-get($font-sizes, display)}rem;
       line-height: map-get($line-heights, display);
+      margin-bottom: map-get($sp-after, display) - map-get($nudges, display);
+      padding-top: map-get($nudges, display);
     }
   }
 
